unpackaged/main/default/objects/litify_pm__Matter_Plan__c/litify_pm__Matter_Plan__c.object-meta.xml
<CustomObject>
    <label>Matter Plan</label>
    <nameField>
        <label>Matter Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matter Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>