unpackaged/main/default/objects/litify_pm__Matter_Plan__c/fields/litify_pm__Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Estimated_Close_Date__c</fullName>
    <formula>TODAY()+ litify_pm__Last_Matter_Task__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Close Date</label>
    <type>Date</type>
</CustomField>