unpackaged/main/default/objects/litify_pm__Matter_Plan__c/fields/litify_pm__Statute_Of_Limitations_Matter_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Statute_Of_Limitations_Matter_Date_Field__c</fullName>
    <label>Deprecated SOL Matter Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>