unpackaged/main/default/objects/litify_pm__Matter_Plan__c/fields/litify_pm__Statute_Of_Limitations_Operator__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Statute_Of_Limitations_Operator__c</fullName>
    <label>Deprecated SOL Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days Before</fullName>
            </value>
            <value>
                <fullName>Days After</fullName>
            </value>
            <value>
                <fullName>Months Before</fullName>
            </value>
            <value>
                <fullName>Months After</fullName>
            </value>
            <value>
                <fullName>Years Before</fullName>
            </value>
            <value>
                <fullName>Years After</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
                <isActive>false</isActive>
                <label>Equals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>