unpackaged/main/default/objects/litify_pm__Matter_Plan__c/fields/litify_pm__Statute_Of_Limitations_Value__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Statute_Of_Limitations_Value__c</fullName>
    <label>Deprecated SOL Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>